migration updateSession
